# kanken-quiz

./: .gitignore  README.md  database_setup.py  main.py  pyproject.toml
scripts/: database_helpers.py  database_setup.py  dictionary_mode.py  jpdb_scrape.py  kanjipedia_scrape.py  quiz_mode.py  schema.py  terminal_helpers.py
